--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: #79a8a9;
 }
 
 section#score {
@@ -15,6 +16,7 @@ section#score {
   width: 640px;
   height: 640px;
   margin: 1em auto;
+  background-color: #f4f7f7;
 }
 
 #board  > div {    
@@ -28,17 +30,16 @@ section#score {
 section#score div {
   width: 10em;
   height: 3em;
+  font-size: 1.2em;
   text-align: center;
   padding: 0.5em;
-  background-color: rgba(211,211,211, 0.75);
+  background-color: #1f4e5f;
+  color: #fff;
   border: 1px solid lightgray;
   border-radius: 1px;
   box-shadow: 1px 1px 5px 1px lightgray;
   margin: 1em auto;
 }
-
-
-
 
 .furry {
   background-image: url('../images/furry.png');
